<resources>
    <string name="app_name">LifePlus Task</string>
    <string name="user_name_text">User Name</string>
    <string name="enter_user_name_text">Enter User Name</string>
    <string name="password_text">Password</string>
    <string name="enter_password_text">Enter Password</string>
    <string name="login_text">Login</string>
    <string name="registration_text">Registration</string>
    <string name="register_text">Register</string>
    <string name="name_text">Name</string>
    <string name="enter_name_text">Enter Name</string>
    <string name="phone_text">Phone</string>
    <string name="enter_phone_text">Enter Phone</string>
    <string name="placeholder_text">-</string>
    <string name="search_show_text">Search show…</string>
    <string name="search_text">Search</string>
    <string name="no_result_text">No results</string>
    <string name="go_back_text">Go Back</string>
    <string name="genres_s_text">Genres: %s</string>
    <string name="schedule_s_text">Schedule: %s</string>
    <string name="runtime_s_mins_text">Runtime: %s mins</string>
    <string name="summary_text">Summary</string>
    <string name="back_arrow_text">Back Arrow</string>
    <string name="logout_text">Logout</string>
</resources>